# gi-utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
gi-utils/: hello.py  main.py
